; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/qcom/venus/extr_hfi_cmds.c_pkt_sys_unset_resource.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/qcom/venus/extr_hfi_cmds.c_pkt_sys_unset_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfi_sys_release_resource_pkt = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@HFI_CMD_SYS_RELEASE_RESOURCE = common dso_local global i32 0, align 4
@HFI_RESOURCE_OCMEM = common dso_local global i32 0, align 4
@ENOTSUPP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pkt_sys_unset_resource(%struct.hfi_sys_release_resource_pkt* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.hfi_sys_release_resource_pkt*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.hfi_sys_release_resource_pkt* %0, %struct.hfi_sys_release_resource_pkt** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load %struct.hfi_sys_release_resource_pkt*, %struct.hfi_sys_release_resource_pkt** %6, align 8
  %11 = getelementptr inbounds %struct.hfi_sys_release_resource_pkt, %struct.hfi_sys_release_resource_pkt* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 16, i32* %12, align 4
  %13 = load i32, i32* @HFI_CMD_SYS_RELEASE_RESOURCE, align 4
  %14 = load %struct.hfi_sys_release_resource_pkt*, %struct.hfi_sys_release_resource_pkt** %6, align 8
  %15 = getelementptr inbounds %struct.hfi_sys_release_resource_pkt, %struct.hfi_sys_release_resource_pkt* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32 %13, i32* %16, align 4
  %17 = load i8*, i8** %9, align 8
  %18 = call i32 @hash32_ptr(i8* %17)
  %19 = load %struct.hfi_sys_release_resource_pkt*, %struct.hfi_sys_release_resource_pkt** %6, align 8
  %20 = getelementptr inbounds %struct.hfi_sys_release_resource_pkt, %struct.hfi_sys_release_resource_pkt* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %7, align 4
  switch i32 %21, label %27 [
    i32 129, label %22
    i32 128, label %22
    i32 130, label %26
  ]

22:                                               ; preds = %4, %4
  %23 = load i32, i32* @HFI_RESOURCE_OCMEM, align 4
  %24 = load %struct.hfi_sys_release_resource_pkt*, %struct.hfi_sys_release_resource_pkt** %6, align 8
  %25 = getelementptr inbounds %struct.hfi_sys_release_resource_pkt, %struct.hfi_sys_release_resource_pkt* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  br label %30

26:                                               ; preds = %4
  br label %30

27:                                               ; preds = %4
  %28 = load i32, i32* @ENOTSUPP, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %5, align 4
  br label %31

30:                                               ; preds = %26, %22
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %30, %27
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @hash32_ptr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
